[package]
name = "xtensa-rust-oled"
version = "0.1.0"
authors = ["Peter De Schrijver <p2@psychaos.be>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xtensa-lx-rt = "0.5.0"
xtensa-lx = "0.3.0"
panic-halt = "0.2.0"

esp32 =  "0.10"
esp32-hal = "0.2"

bit = "0.1"

